<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">sBNWAS_CMA</string>
    <string name="id">아이디</string>
    <string name="password">패스워드</string>
    <string name="login">로그인</string>


    <string name="time_out">데이터를 받아오지 못했습니다.</string>
    <string name="work_day">근무일</string>
    <string name="role">역할</string>
    <string name="planned_working_hours">계획 근무 시간</string>
    <string name="real_working_hours">실제 근무 시간</string>
    <string name="work_position">근무 위치</string>
    <string name="workday_diary_preparation">근무일지 작성</string>
    <string name="start_of_duty">근무 시작</string>
    <string name="end_of_duty">근무 종료</string>
    <string name="address">주소</string>
    <string name="diary_title">근무 일지 작성</string>
    <string name="diary_hint">일지를 작성합니다</string>
    <string name="send_long">전   송</string>
    <string name="gubun">구분</string>
    <string name="mesure_datetime">측정일시</string>
    <string name="close">닫기</string>
    <string name="cancel">취소</string>
    <string name="anal_datetime">분석일시</string>
    <string name="cma_login">CMA 로그인</string>
    <string name="bas_title">심음/폐음</string>
    <string name="bls_title">혈당</string>
    <string name="blp_title">혈압</string>
    <string name="oxs_title">산소포화도</string>
    <string name="htr_title">심박수</string>
    <string name="tmm_title">체온</string>
    <string name="watch_title">WATCH</string>
    <string name="ecg_title">심전도</string>
    <string name="sleep_title">수면</string>
    <string name="hour">시간</string>
    <string name="minute">분</string>
    <string name="calorie_title">칼로리</string>
    <string name="walk_title">걸음</string>
    <string name="distance_title">거리</string>
    <string name="activity_title">활동</string>
    <string name="health_total_anal">건강 종합 분석</string>
    <string name="all_bmi_title">체질량계</string>
    <string name="weight_title">체중</string>
    <string name="bfm_title">체지방량</string>
    <string name="bo_title">골격근량</string>
    <string name="bmi_title">BMI</string>
    <string name="all_bmi2_title">체성분</string>
    <string name="body_water_title">체수분</string>
    <string name="bfm_propotion_title">체지방률</string>
    <string name="msg_searching_watch">업무시작을위해 Watch를 찾고 있습니다.\\n 잠시 기다려주십시오</string>
    <string name="health_checkup_anal">건강 검진 분석</string>
    <string name="on_work_check">근무 중 체크</string>
    <string name="account">계정</string>
    <string name="common">일반</string>
    <string name="name">이름</string>
    <string name="gender">성별</string>
    <string name="dayofbarth">생년월일</string>
    <string name="phone_number">전화번호</string>
    <string name="zip_code">우편번호</string>
    <string name="dayofenter">입사일</string>
    <string name="company_user_no">사번</string>
    <string name="body_info">신체정보</string>
    <string name="heigh">키</string>
    <string name="age">나이</string>
    <string name="total_sleep_time">총 수면 시간</string>
    <string name="deep_sleep">깊은 수면</string>
    <string name="non_deep_sleep">얕은 수면</string>
    <string name="ram_sleep">램 수면</string>
    <string name="etc">기타</string>
    <string name="work_plan">근무 계획</string>
    <string name="work_history">근무 이력</string>
    <string name="bmi2">체질량지수(BMI)</string>
    <string name="hsm_title">심음</string>
    <string name="regularity">규칙도</string>
    <string name="lsm">폐음</string>
    <string name="systolic">수축기</string>
    <string name="diastole">이완기</string>
    <string name="product_name">제품명</string>
    <string name="model_name">모델명</string>
    <string name="version">버전</string>
    <string name="product_company">제조사</string>
    <string name="bas_front">전면/</string>
    <string name="bas_back">후면/</string>
    <string name="on">켜짐</string>
    <string name="off">꺼짐</string>
    <string name="day">일</string>
    <string name="work_planed">근무 예정</string>
    <string name="work_on">근무중</string>
    <string name="work_planed_daytime">"계획일시 : "</string>
    <string name="work_start_time">"시작시간 : "</string>
    <string name="work_place">근 무 지 :</string>
    <string name="work_role">역    할 :</string>
    <string name="before_work_check">근무 시작전 체크</string>
    <string name="msg_permission_comfirmed">권한 확인 되었습니다.</string>
    <string name="msg_comfrim_from_setting">설정에서 권한을 허가 해주세요.</string>
    <string name="msg_always_permission_cofrimed">백그라운드 위치 권한을 위해 설정에서 항상 허용으로 설정해주세요</string>
    <string name="msg_comfrim_permission">권한을 허가 해주세요.</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="msg_non_wear_watch">Watch 미 착용 알림</string>
    <string name="msg_wear_watch_on_work">근무 중 watch 를 착용 하세요.</string>
    <string name="msg_wear_watch_before_work">근무 시작전 watch 를 착용 하세요.</string>
    <string name="msg_watch_battery">Watch 배터리 충전 알림</string>
    <string name="msg_watch_batter_under_70">Watch Battery 70% 이하입니다. 근무 시작전 Watch Battery 를 충전 하세요.</string>
    <string name="msg_service_on">sBNWAS CMA 서비스 실행중입니다.</string>
    <string name="basic_channel">기본채널</string>
    <string name="msg_warning_out_of_area">근무지이탈 경고</string>
    <string name="msg_warning_out_of_area_desc">디바이스의 Wifi가 동작하지 않거나 근무지를 이탈했습니다.근무시간이 종료 되었다면 근무조회 화면에서 근무 종료을 실행 해야 합니다</string>
    <string name="noti_on_work_health_check">근무 중 건강 정보 측정 알림</string>
    <string name="noti_watch_info_non_accepted">Watch 정보 미수신 알림</string>
    <string name="noti_watch_info_non_accepted_desc">Watch 연결 및 착용 상태를 확인 하세요.</string>
    <string name="noti_before_work_health_check">근무 시작 전 건강 정보 측정 알림</string>
    <string name="msg_input_id">아이디를 입력하세요</string>
    <string name="msg_input_pw">패스워드를 입럭하세요</string>
    <string name="msg_accept_permission_on_health_connect">헬스커넥트에서 권한을 허용해주세요</string>
    <string name="msg_watch_non_responding">Watch에 FMD앱이 응답하지 않습니다.</string>
    <string name="msg_check_watch_bluetooth">워치가 작동하는지, 블루투스가 켜져있는지 혹은 FMD가 설치되어있는지 확인하세요</string>
    <string name="msg_unable_to_find_watch">워치를 찾을수 없습니다.</string>
    <string name="msg_set_diary">일지를 작성하세요</string>
    <string name="want_send">전송하시겠습니까?</string>
    <string name="confrim">확인</string>
    <string name="device_list">디바이스 목록</string>
    <string name="setting_monitor">설정 모니터</string>
    <string name="start_work">근무를 시작합니다</string>
    <string name="end_work">근무를 종료합니다</string>
    <string name="monitor">모니터</string>
    <string name="sleep_detail">수면상세</string>
    <string name="sleep_detail_2">수면\\n상세</string>
    <string name="my_page">마이 페이지</string>
    <string name="msg_current_30_days">최근 30일 알람을 조회합니다.</string>
    <string name="noti_monitor">알림 모니터</string>
    <string name="msg_current_30_days_work">30일 근무이력을 조회합니다.</string>
    <string name="msg_1_weeks_work_plan">1주일 근무계획을 조회합니다.</string>
    <string name="msg_non_connected_to_watch">워치에 연결되어있지 않습니다.</string>
    <string name="mesure_compelete">측정완료</string>
    <string name="unknown">알 수 없음</string>
    <string name="awake">깨어 있음</string>
    <string name="sleeping">일반적인 수면</string>
    <string name="light">얕은 수면</string>
    <string name="deep">깊은 수면</string>
    <string name="rem">램 수면</string>
    <string name="out_of_bed">침대에서 일어남</string>
    <string name="com_sec_android_app_shealth">삼성 헬스</string>
    <string name="where_unknown">출처 모름</string>
    <string name="badminton">배드민턴</string>
    <string name="baseball">야구</string>
    <string name="basketball">농구</string>
    <string name="biking">자전거</string>
    <string name="boxing">복싱</string>
    <string name="cricket">크리켓</string>
    <string name="dancing">춤주기</string>
    <string name="fencing">펜싱</string>
    <string name="football_american">미식축구</string>
    <string name="golf">골프</string>
    <string name="handball">핸드볼</string>
    <string name="hiking">하이킹</string>
    <string name="ice_hockey">아이스하키</string>
    <string name="ice_skating">아이스 스케이팅</string>
    <string name="pilates">필라테스</string>
    <string name="rowing">조정</string>
    <string name="rugby">럭비</string>
    <string name="running">달리기</string>
    <string name="scuba_diving">스쿠버 다이빙</string>
    <string name="skating">스케이팅</string>
    <string name="skiing">스키</string>
    <string name="soccer">축구</string>
    <string name="softball">소프트볼</string>
    <string name="squash">스쿼시</string>
    <string name="surfing">서핑</string>
    <string name="swimming_open_water">바다수영</string>
    <string name="swimming_pool">수영</string>
    <string name="table_tennis">탁구</string>
    <string name="tennis">테니스</string>
    <string name="volleyball">배구</string>
    <string name="walking">걷기</string>
    <string name="yoga">요가</string>
    <string name="basic_setting">기본설정</string>
    <string name="setting_before_work">근무 시작 전 설정</string>
    <string name="setting_on_work">근무 중 설정</string>
    <string name="cho_total">총 콜레스테롤</string>
    <string name="cho_ldl">저밀도 콜레스테롤</string>
    <string name="cho_tri">중성지방</string>
    <string name="cho_hdl">고밀도 콜레스테롤</string>
    <string name="cho">콜레스테롤</string>
</resources>