<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="name"
            type="java.lang.String" />

        <variable
            name="controller"
            type="com.familidata.sbnwas_cma.base.view.IController" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="326dp"
            android:background="@drawable/ract_rounded15_ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dialog_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:fontFamily="@font/pretendard_semibold"
                android:lineSpacingExtra="4sp"
                android:text="@string/diary_title"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="34dp"
                android:src="@drawable/pen_icon"
                app:layout_constraintStart_toEndOf="@+id/dialog_title_tv"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/profile_et"
                android:layout_width="270dp"
                android:layout_height="170dp"
                android:layout_marginTop="14dp"
                android:background="#f5f6f8"
                android:gravity="left"
                android:hint="@string/diary_hint"
                android:padding="10dp"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_title_tv" />

            <TextView
                android:id="@+id/profile_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ract_rounded100_547fe8"
                android:fontFamily="@font/pretendard_semibold"
                android:gravity="center"
                android:text="@string/send_long"
                android:textColor="@color/white"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_et" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>