<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />


        <variable
            name="userId"
            type="java.lang.String" />

        <variable
            name="controller"
            type="com.familidata.sbnwas_cma.base.view.IController" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#edeef2"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="140dp"
            android:layout_height="27dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14.7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivSim"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:src="@drawable/simbol_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="94dp"
                android:layout_height="match_parent"
                android:src="@drawable/font_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivSim"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="-6sp"
            android:text="@string/cma_login"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/a">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="55dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="55dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/et_userId"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ract_bottom_c0c0c0"
                    android:ems="10"
                    android:hint="@string/id"
                    android:inputType="textEmailAddress"
                    android:lineSpacingExtra="3sp"
                    android:paddingStart="6.5dp"
                    android:paddingEnd="6.5dp"
                    android:text="@{userId}"
                    android:textColor="#858585"
                    android:textColorHint="#858585"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/et_userPw"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ract_bottom_c0c0c0"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lineSpacingExtra="3sp"
                    android:paddingStart="6.5dp"
                    android:paddingEnd="6.5dp"
                    android:text="@{userId}"
                    android:textColor="#858585"
                    android:textColorHint="#858585"
                    android:textSize="15dp" />

            </LinearLayout>


            <Button
                android:id="@+id/bt_login"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ract_rounded100_547fe8"
                android:fontFamily="@font/pretendard_semibold"
                android:onClick="@{(v) -> controller.onClicking(v)}"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="17dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>