<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000">


        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ract_rounded15_ffffff"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/xx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/pretendard_medium"
                android:lineSpacingExtra="2sp"
                android:text="@string/gubun"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="end"
                android:lineSpacingExtra="2sp"
                android:textColor="#898989"
                android:textSize="14sp"
                android:textStyle="normal" />

            <View
                android:id="@+id/xxx"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/xx"
                android:layout_marginTop="16dp"
                android:background="#c0c0c0" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/xxx"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/pretendard_medium"
                android:lineSpacingExtra="2sp"
                android:text="@string/mesure_datetime"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/xxx"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="end"
                android:lineSpacingExtra="2sp"
                android:textColor="#898989"
                android:textSize="14sp"
                android:textStyle="normal" />


            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="99dp" />


            <TextView
                android:id="@+id/tvClose"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="169dp"
                android:background="@drawable/ract_rounded100_a6a6aa"
                android:fontFamily="@font/pretendard_semibold"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textStyle="normal" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>