<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="bean"
            type="com.familidata.sbnwas_cma.base.model.vo.VoWorkMonitor" />

        <variable
            name="controller"
            type="com.familidata.sbnwas_cma.base.view.IController" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:lineSpacingExtra="3sp"
            android:text="@string/work_position"
            android:textColor="#000000"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_medium"
            android:lineSpacingExtra="3sp"
            android:text="@string/role"
            android:textColor="#000000"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_medium"
            android:lineSpacingExtra="3sp"
            android:text="@string/planned_working_hours"
            android:textColor="#000000"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_medium"
            android:lineSpacingExtra="3sp"
            android:text="@string/real_working_hours"
            android:textColor="#000000"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_regular"
            android:gravity="end"
            android:lineSpacingExtra="2sp"
            android:text="@{bean.model.workPlace}"
            android:textColor="#898989"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="사무실1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_regular"
            android:gravity="end"
            android:lineSpacingExtra="2sp"
            android:text="@{bean.model.workRole}"
            android:textColor="#898989"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView7"
            tools:text="사무실1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_regular"
            android:gravity="end"
            android:lineSpacingExtra="2sp"
            android:text="@{bean.planTimeForView}"
            android:textColor="#898989"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView8"
            tools:text="사무실1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pretendard_regular"
            android:gravity="end"
            android:lineSpacingExtra="2sp"
            android:text="@{bean.actualTimeForView}"
            android:textColor="#898989"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView9"
            tools:text="사무실1" />

        <View
            android:id="@+id/v"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#c0c0c0"
            app:visible="@{bean.bottomLineVisible}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView10" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>